# gossip-semantic-search

./: .gitignore  Dockerfile  README.md  backend.py  cached_urls.pkl  cached_urls_test.pkl  data_collect.ipynb  frontend.py  load_articles.py  pyproject.toml  requirements.txt  start.sh  tests.py
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: backend.py  data_models.py  frontend.py  load_articles.py  main.py
tests/: conftest.py  test_backend.py  test_load_articles.py
