[project]
name = "gossip-semantic-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "feedparser>=6.0.12",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "requests>=2.32.5",
    "httpx>=0.27.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "tf-keras>=2.20.1",
    "uvicorn>=0.35.0",
    "dotenv>=0.9.9",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing:skip-covered --cov-fail-under=100 --cov-config=pyproject.toml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == \"__main__\":",
]
omit = [
    "src/frontend.py",
    "src/main.py",
]
